--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: sudo apt-get install graphviz
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y graphviz
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
